Review fix: Track 8 Step 10 — tighten assertions + add gap tests
Step-level review findings applied:

Tightened assertions:
- BC1/TB3: update_returnBefore catch narrowed from RuntimeException to
  DatabaseException with exact-message check ("BEFORE is not supported")
  so unrelated NPE/CCE cannot masquerade as success.
- BC3: createEdge_upsert_unknownClass message assertion now requires
  "not found" (dropped the overly-loose "class" alternative).
- BC5: orderBySynthetic_recordAttribute now iterates getPropertyNames
  and asserts no alias starts with "_$$$", surviving future renames of
  the synthetic marker while still catching real leaks.
- TB4: createEdge_defaultTargetClassE now asserts @class = "E" via
  SELECT subquery, not just "an edge exists".
- TB5: createEdge_upsert_happyPath_reusesEdge captures both RIDs and
  asserts equality — no longer susceptible to "UPSERT deleted and
  reinserted under a new RID" regression.
- TB6/TC12: fetchFromLiteralRid_nonExistent now derives the cluster id
  from a real record, avoiding dependency on "#999:0 happens to be
  unused" heuristic.
- BC2: selectFromInputParam_iterableFirstElementBad replaced with
  iterableMidElementBad — tests the same guard at a different iteration
  position (valid RID first, bad element second) rather than duplicating
  the single-element throw test.

Falsifiability improvements:
- TB1: splitLet test projects $sub.size() and verifies every outer row
  sees a non-null binding plus every distinct outer row name is visited
  (three-way: {row0, row1, row2}). A no-op splitLet would still parse but
  the LET-binding visibility contract is now pinned.
- CQ3/CQ5: ASCII replacements for Unicode characters (≥ → >=,
  ── → --- in comment dividers).

Completeness additions (TC1, TC2, TC3, TC5):
- fetchFromLiteralRidList_multipleRids: SELECT FROM [#c:p1, #c:p2, #c:p3]
  exercises the loop body with N > 1.
- fetchFromMetadataSchema: SELECT FROM metadata:schema exercises
  target.getMetadata() path and handleMe